<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#12131F"
    tools:context=".Details">


    <ImageView
        android:id="@+id/imageview"
        android:layout_width="334dp"
        android:layout_height="181dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#F05152"
        android:text="@string/button_3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview" />

    <EditText
        android:id="@+id/et_1"
        android:layout_width="278dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white2"
        android:ems="10"
        android:hint="@string/editTextDate2"
        android:inputType="date"
        android:text="@string/et_1"
        android:textColorHint="@color/white2"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_3"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_2"
        android:layout_width="278dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white2"
        android:ems="10"
        android:hint="@string/editTextDate3"
        android:inputType="date"
        android:text="@string/et_2"
        android:textColorHint="@color/white2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_1"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_3"
        android:layout_width="278dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white2"
        android:ems="10"
        android:hint="@string/editTextDate4"
        android:inputType="date"
        android:text="@string/et_3"
        android:textColorHint="@color/white2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_2"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_4"
        android:layout_width="278dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white2"
        android:ems="10"
        android:hint="@string/editTextDate5"
        android:inputType="date"
        android:text="@string/et_4"
        android:textColorHint="@color/white2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_3"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#F05152"
        android:text="@string/button2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_4"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
