<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#12131F"
    tools:context=".Password">


    <TextView
        android:id="@+id/TextView21"
        android:layout_width="251dp"
        android:layout_height="57dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="124dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/TextView21"
        android:textColor="#FFF9C4"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="80dp" />

    <EditText
        android:id="@+id/et_1"
        android:layout_width="280dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/white2"
        android:ems="10"
        android:hint="@string/EditTextDate2"
        android:inputType="date"
        android:textColorHint="@color/white2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <EditText
        android:id="@+id/et_2"
        android:layout_width="280dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white2"
        android:ems="10"
        android:hint="@string/EditTextDate3"
        android:inputType="date"
        android:textColorHint="@color/white2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_1" />

    <EditText
        android:id="@+id/et_3"
        android:layout_width="280dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white2"
        android:ems="10"
        android:hint="@string/EditTextDate4"
        android:inputType="date"
        android:textColorHint="@color/white2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_2" />

    <Button
        android:id="@+id/button8"
        android:layout_width="182dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#F05152"
        android:text="@string/button8"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_3" />

</androidx.constraintlayout.widget.ConstraintLayout>