<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#12131F"
    android:onClick="open_add_a_movie_details"
    tools:context=".Admin_Menu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="220dp"
        android:layout_height="57dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="sans-serif-black"
        android:text="ADMIN MENU"
        android:textColor="#FFF9C4"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#F05152"
        android:fontFamily="sans-serif-black"
        android:onClick="open_add_a_movie_details"
        android:text="@string/button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button6"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#F05152"
        android:fontFamily="sans-serif-black"
        android:onClick="open_manage"
        android:text="@string/button6"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button7"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#F05152"
        android:fontFamily="sans-serif-black"
        android:onClick="open_view_bookings"
        android:text="@string/button7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button9"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#F05152"
        android:fontFamily="sans-serif-black"
        android:onClick="open_password"
        android:text="@string/button9"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />




    </androidx.constraintlayout.widget.ConstraintLayout>